fixed menu categories not showing up

--- a/frontend/src/Employee/pages/Employee.css
+++ b/frontend/src/Employee/pages/Employee.css
@@ -28,16 +28,7 @@ button:hover {
     background-color: rgb(0, 69, 142);
 }
 
-.bottom-nav button {
-    font-size: 24px;
-    background-color: #005bbd;
-}
-.bottom-nav button:hover {
-    background-color: rgb(0, 69, 142);
-}
-
-.large-text .top-bar button,
-.large-text .bottom-nav button {
+.large-text .top-bar button {
     font-size: 40px;
 }
 
@@ -52,79 +43,4 @@ button:hover {
 
 .user-info span {
     margin-right: 10px;
-}
-
-.middle-content {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-}
-
-.layout {
-    width: 100%;
-    height: 768px;
-  
-    display: grid;
-    grid-template-columns: 3fr 2fr; 
-    grid-template-areas: "leftSide rightSide";
-    gap: 8px;
-}
-.leftSide { 
-    grid-area: leftSide; 
-    background-color: rgb(227, 227, 227);
-    margin: 5px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-.rightSide { 
-    grid-area: rightSide; 
-    background-color: rgb(227, 227, 227);
-    margin-right: 5px;
-    padding: 20px;
-    font-size: 20px;
-}
-
-.large-text .categoryName {
-    font-size: 40px;
-}
-
-.items {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-    justify-content: space-around;
-    width: 100%;
-}
-
-.items button {
-    padding: 10px;
-    margin: 10px;
-    width: 95%;
-    height: 100%;
-}
-
-.large-text .items button{
-    font-size: 40px;
-}
-
-.bottom-nav {
-    background-color: #f8f9fa;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: stretch;
-    padding: 20px 0;
-}
-
-.bottom-nav button {
-    flex-grow: 1;
-    min-height: 90px;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    margin: 0 10px;
-    cursor: pointer;
 }
